--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,6 +6,10 @@ on:
       - main
   workflow_dispatch:  # Allows manual trigger
 
+concurrency:
+  group: terraform
+  cancel-in-progress: true
+
 jobs:
   terraform:
     runs-on: ubuntu-latest
