--- a/.github/workflows/iam-cleanup.yml
+++ b/.github/workflows/iam-cleanup.yml
@@ -1,5 +1,41 @@
-- name: List IAM roles
-  run: |
-    aws iam list-roles \
-      --query 'Roles[].RoleName' \
-      --output table
+name: IAM cleanup (one-time)
+
+on:
+  workflow_dispatch:   # run manually only
+
+jobs:
+  cleanup-iam:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+
+      - name: List IAM roles (sanity check)
+        run: |
+          aws iam list-roles \
+            --query 'Roles[].RoleName' \
+            --output table
+
+      - name: Detach role from instance profile
+        run: |
+          aws iam remove-role-from-instance-profile \
+            --instance-profile-name terraform-ec2-ssm-profile-v2 \
+            --role-name terraform-ec2-ssm-role
+
+      - name: Delete instance profile
+        run: |
+          aws iam delete-instance-profile \
+            --instance-profile-name terraform-ec2-ssm-profile-v2
+
+      - name: Delete IAM role
+        run: |
+          aws iam delete-role \
+            --role-name terraform-ec2-ssm-role
